@@ -1,5 +1,10 @@
 2010-10-07  Francois Felix Ingrand  <felix@ingrand.net>
 
+	* ev-predicate.c (declare_eval_pred): added INTEGERP, FLOATP and LONG_LONGP as evaluable predicates.
+
+	* ev-function.c (float_to_int_ef): Allowed to pass an int...
+	(int_to_float_ef): allow to pass a float and a long long
+
 	* oprs-init.c (parse_one_or_more): The PRS kernel should return 0 when everything is
 		  OK. Thanks to Eric Engstrom at SIFT for pointing this.
 
